# fast_image_resize

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmarks-arm64.md  benchmarks-wasm32.md  benchmarks-x86_64.md  benchmarks.md  benchmarks_arm64.md  benchmarks_x86-64.md  dev.md  rustfmt.toml
.github/workflows/: check_and_test.yaml
benches/: bench_alpha.rs  bench_color_mapper.rs  bench_compare.rs  bench_compare_l.rs  bench_compare_l16.rs  bench_compare_l32f.rs  bench_compare_la.rs  bench_compare_la16.rs  bench_compare_la32f.rs  bench_compare_la_f32.rs  bench_compare_rgb.rs  bench_compare_rgb16.rs  bench_compare_rgb32f.rs  bench_compare_rgba.rs  bench_compare_rgba16.rs  bench_compare_rgba32f.rs  bench_compare_rgbx.rs  bench_compare_u8.rs  bench_resize.rs  bench_threads.rs
benches/templates/: bench_compare_l.md.tera  bench_compare_l16.md.tera  bench_compare_l32f.md.tera  bench_compare_la.md.tera  bench_compare_la16.md.tera  bench_compare_la32f.md.tera  bench_compare_la_f32.md.tera  bench_compare_rgb.md.tera  bench_compare_rgb16.md.tera  bench_compare_rgb32f.md.tera  bench_compare_rgba.md.tera  bench_compare_rgba16.md.tera  bench_compare_rgba32f.md.tera  introduction.md.tera
benches/utils/: bencher.rs  mod.rs  resize_functions.rs  results.rs  testing.rs
resizer/: Cargo.toml
resizer/src/: main.rs  structs.rs
src/: array_chunks.rs  change_components_type.rs  cpu_extensions.rs  crop_box.rs  dynamic_image_view.rs  errors.rs  float_ext.rs  image.rs  image_data.rs  image_rows.rs  image_view.rs  lib.rs  mul_div.rs  neon_utils.rs  optimisations.rs  pixels.rs  resizer.rs  simd_utils.rs  testing.rs  threading.rs  typed_image_view.rs  utils.rs  wasm32_utils.rs
src/alpha/: common.rs  div.rs  errors.rs  mod.rs  mul.rs
src/alpha/avx2/: div.rs  mod.rs  mul.rs
src/alpha/f32x2/: avx2.rs  mod.rs  native.rs  sse4.rs
src/alpha/f32x4/: avx2.rs  mod.rs  native.rs  sse4.rs
src/alpha/native/: div.rs  mod.rs  mul.rs
src/alpha/sse2/: div.rs  mod.rs  mul.rs
src/alpha/sse4/: div.rs  mul.rs
src/alpha/u16x2/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/alpha/u16x4/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/alpha/u8x2/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/alpha/u8x4/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/color/: gamma.rs  mappers.rs  mod.rs  srgb.rs
src/compat/: mod.rs  no_std_impl.rs  std_impl.rs
src/convolution/: avx2.rs  filters.rs  macros.rs  mod.rs  native.rs  optimisations.rs  sse4.rs
src/convolution/avx2/: mod.rs  u8x4.rs
src/convolution/f32x1/: avx2.rs  mod.rs  native.rs  sse4.rs
src/convolution/f32x2/: avx2.rs  mod.rs  native.rs  sse4.rs
src/convolution/f32x3/: avx2.rs  mod.rs  native.rs  sse4.rs
src/convolution/f32x4/: avx2.rs  mod.rs  native.rs  sse4.rs
src/convolution/i32x1/: mod.rs  native.rs
src/convolution/native/: f32x1.rs  i32x1.rs  mod.rs  u8x4.rs
src/convolution/sse4/: mod.rs  u8x4.rs
src/convolution/u16x1/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u16x2/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u16x3/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u16x4/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u8x1/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u8x2/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u8x3/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/u8x4/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/vertical_f32/: avx2.rs  mod.rs  native.rs  sse4.rs
src/convolution/vertical_u16/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/convolution/vertical_u8/: avx2.rs  mod.rs  native.rs  neon.rs  sse4.rs  wasm32.rs
src/images/: cropped_image.rs  dyn_image.rs  image.rs  image_crate.rs  mod.rs  typed_cropped_image.rs  typed_image.rs  unsafe_image.rs
testing/: Cargo.toml
testing/src/: lib.rs
tests/: alpha_tests.rs  color_tests.rs  examples.rs  image_view.rs  images_tests.rs  readme.rs  readme_examples.rs  resize_tests.rs  testing.rs  utils.rs
