[package]
name = "resizer"
version = "0.1.0"
edition = "2021"


[dependencies]
fast_image_resize = {path=".."}
image = "0.24.5"
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.3"
anyhow = "1.0.66"
clap-verbosity-flag = "2.0.0"
once_cell = "1.16.0"


[package.metadata.release]
publish = false
