[package]
name = "resizer"
version = "0.1.0"
edition = "2021"


[dependencies]
fast_image_resize = {path=".."}
image = "0.24"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap-verbosity-flag = "2"
once_cell = "1"


[package.metadata.release]
publish = false
