[package]
name = "resizer"
version = "0.1.0"
edition = "2021"


[dependencies]
fast_image_resize = { path = "..", features = ["image"] }
image = "0.25.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0"
clap-verbosity-flag = "2.2"
once_cell = "1.19"


[package.metadata.release]
publish = false
