[package]
name = "testing"
version = "0.1.0"
edition = "2021"


[dependencies]
fast_image_resize = { path = "..", features = ["for_testing"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }


[features]
only_u8x4 = []  # This can be used to experiment with the crate's code.
rayon = ["fast_image_resize/rayon", "image/rayon"]


[package.metadata.release]
publish = false
